# Leistungskurve

./: .gitignore  README.md  power_curve.py  pyproject.toml  sort.py
